Added 1.20.2 support, removed 1.19 and 1.19.1 support