@@ -5,6 +5,7 @@ import dev.rosewood.rosegarden.utils.NMSUtil;
 import dev.rosewood.rosestacker.manager.StackManager;
 import dev.rosewood.rosestacker.utils.PersistentDataUtils;
 import dev.rosewood.rosestacker.utils.ThreadUtils;
+import java.util.Arrays;
 import java.util.List;
 import org.bukkit.Chunk;
 import org.bukkit.block.BlockState;
@@ -60,7 +61,7 @@ public class WorldListener implements Listener {
                     if (entity instanceof LivingEntity)
                         PersistentDataUtils.applyDisabledAi((LivingEntity) entity);
 
-                this.stackManager.loadChunkEntities(chunk, List.of(entities));
+                this.stackManager.loadChunkEntities(chunk, Arrays.asList(entities));
             }
 
             this.stackManager.loadChunkBlocks(chunk);
@@ -72,7 +73,7 @@ public class WorldListener implements Listener {
         this.stackManager.saveChunkBlocks(event.getChunk(), true);
 
         if (NMSUtil.getVersionNumber() < 17)
-            this.stackManager.saveChunkEntities(event.getChunk(), List.of(event.getChunk().getEntities()), true);
+            this.stackManager.saveChunkEntities(event.getChunk(), Arrays.asList(event.getChunk().getEntities()), true);
     }
 
     @EventHandler
